--- a/homepage.html
+++ b/homepage.html
@@ -22,28 +22,37 @@
           <a href="" style="float: center;"> Savings Account</a>
 				</div>
 			</div>
-		</div>
+    </div>
+    <h2></h2>
+    <div class="topnav">
           <!This is the Transaction section: NEED TO INSERT IMAGE>
-    <div id = "grad2", class = "header"><h1>
-      <p class = "custom1"> Transactions</p>
-    </h1>
-      <a href="<!Add a link>" style="float: right;"> Transfer</a>
-      <a href="<!Add a link>" style="float: center;"> Withdraw</a>
-      <a href="<!Add a link>" style="float: left;"> Deposit </a>
+      <div id = "grad2", class = "header"><h1>
+        <p class = "custom1"> Transactions</p>
+      </h1>
+
+        <a href="" style="float: right;"> Transfer</a>
+        <a href="" style="float: center;"> Withdraw</a>
+        <a href="" style="float: left;"> Deposit </a>
+      </div>
     </div>
 
+    <h2></h2>
+    <div class="topnav">
           <!This is the Account History section: NEED TO INSERT IMAGE>
       <div id = "grad2", class = "header"><h1>
         <p class = "custom1"> Account History</p>
       </h1>
-        <a href="<!Add a link>" style="float: right;"> Checking Account</a>
-        <a href="<!Add a link>" style="float: center;"> Savings Account</a>
+        <a href="" style="float: left;"> Checking Account</a>
+        <a href="" style="float: center;"> Savings Account</a>
       </div>
+    </div>
 
+    <h2></h2>
+    <div class="topnav">
           <!This is the Account Settings section: NEED TO INSERT IMAGE>
       <div id = "grad2", class = "header"><h1>
         <p class = "custom1"> Account Settings</p>
       </h1></div>
-      
+    </div>
   </body>
 </html>
